refactor: Make the date field editable so that one can populate dfferent dates

--- a/apps/hep-tracker/public/index.html
+++ b/apps/hep-tracker/public/index.html
@@ -77,7 +77,7 @@
 
                 <div class="form-group">
                     <label for="logger-date">Date:</label>
-                    <input type="date" id="logger-date" readonly>
+                    <input type="date" id="logger-date" placeholder="mm/dd/yyyy">
                 </div>
 
                 <div id="logger-exercises" class="exercises-list">
