fix: JS file links to public/src/app.js folder

--- a/apps/shift-notes/public/index.html
+++ b/apps/shift-notes/public/index.html
@@ -92,6 +92,10 @@
             <div class="card">
                 <h2 style="margin-bottom: 1.5rem; font-size: 1.25rem;">Shift Notes Review</h2>
 
+                <div id="loading-message" class="alert alert-info" style="display: none;">
+                    <strong>Loading...</strong> Refreshing shift notes data.
+                </div>
+
                 <div class="filters">
                     <div class="form-group">
                         <label for="filter-nurse">Filter by Nurse <span class="required">*</span></label>
@@ -180,6 +184,6 @@
         </div>
     </footer>
 
-    <script type="module" src="../src/app.js"></script>
+    <script type="module" src="src/app.js"></script>
 </body>
 </html>
